# Smart-Vehicle-Control-ECU-Linux-Test

./: AI_CONTEXT.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md  bcm_sil_app
app/: CanDispatcher.cpp  CanDispatcher.hpp  CanTransmitter.cpp  CanTransmitter.hpp  DiagnosticService.cpp  DiagnosticService.hpp  DoorControl.cpp  DoorControl.hpp  InputMonitor.cpp  InputMonitor.hpp  LightControl.cpp  LightControl.hpp  NvM.cpp  NvM.hpp  SecurityFilter.cpp  SecurityFilter.hpp  WiperControl.cpp  WiperControl.hpp  main.cpp
hal/mock/: can_if.h  can_if_mock.c  gpio.h  uart.h  uart_mock.c
services/: EcuM.h  Rte_Door.h  Rte_Light.h  Rte_Sensor.c  Rte_Sensor.h  Rte_Types.h  Rte_Wiper.c  Rte_Wiper.h  cmsis_os2.h  cmsis_os2_mock.c  rte_mock.c  wdg_manager.h  wdg_manager_mock.c
simulator/: Test_Report.txt  Test_Report_TCP.txt  auto_test.py  client.py  dashboard.py
tests/: dummy_test.cpp  security_test.cpp
